# django-app

./: .env.template  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
mysite/mysite/: settings.py
