[tool.poetry]
name = "prod"
version = "0.1.0"
description = ""
authors = ["Vladimir Pozov <vovasp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2"
djangorestframework = "3.14.0"
django-filter = "22.1"
django-debug-toolbar = "4.0.0"
pillow = "9.4.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
